apps/node/users-grpc/k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-users-grpc
  labels:
    app: node-users-grpc
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      name: node-users-grpc
      labels:
        app: node-users-grpc
        version: v1
      annotations:
        "linkerd.io/inject": "enabled"
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/connect-service": "node-users-grpc"
        "consul.hashicorp.com/connect-service-protocol": "http"
        "consul.hashicorp.com/service-meta-version": "v.1.1"
        "prometheus.io/scrape": "true"
        "prometheus.io/port": "9102"
    spec:
      serviceAccountName: node-users-grpc
      containers:
        - name: node-users-grpc
          image: yurikrupnik/node-users-grpc:latest
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: node-users-grpc
      version: v1
