apps/node/users-grpc/k8s/base/ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: node-users-grpc-gateway
#  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-users-grpc
#  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - node-users-grpc-gateway
  http:
    - match:
        - uri:
            exact: /api/users
      #        - uri:
      #            prefix: /static
      #        - uri:
      #            exact: /login
      #        - uri:
      #            exact: /logout
      #        - uri:
      #            prefix: /api/v1/products
      route:
        - destination:
            #            host: argocd-server.argocd.svc.cluster.local
            host: node-users-grpc-service.default.svc.cluster.local
            #            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 3333
